--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
-    implementation 'org.slf4j:slf4j-api:2.0.13'
+//    implementation 'org.slf4j:slf4j-api:2.0.13'
 
 
 
